feature: Make package 100% npm-ready with CLI support and proper metadata

--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "artillery-mcp-server",
+  "name": "@jch1887/artillery-mcp-server",
   "version": "1.0.0",
   "description": "MCP server for Artillery load testing",
   "main": "dist/server.js",
+  "bin": {
+    "artillery-mcp-server": "dist/server.js"
+  },
   "type": "module",
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "tsx src/server.ts",
     "test": "vitest",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "prepublishOnly": "npm run build",
+    "pack": "npm pack",
+    "prepack": "npm run build"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
     "zod": "^3.22.4",
-    "pino": "^8.17.2"
+    "pino": "^8.17.2",
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -24,10 +36,30 @@
     "vitest": "^1.0.0",
     "@vitest/coverage-v8": "^1.0.0"
   },
-  "keywords": ["mcp", "artillery", "load-testing", "server"],
-  "author": "",
+  "keywords": [
+    "mcp",
+    "artillery",
+    "load-testing",
+    "server",
+    "model-context-protocol",
+    "performance-testing",
+    "http-testing",
+    "api-testing"
+  ],
+  "author": "jch1887",
   "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jch1887/artillery-mcp-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jch1887/artillery-mcp-server/issues"
+  },
+  "homepage": "https://github.com/jch1887/artillery-mcp-server#readme",
+  "publishConfig": {
+    "access": "public"
   }
 } 
