--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "prepack": "npm run build"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.4.0",
-    "zod": "^3.22.4",
-    "pino": "^8.17.2",
-    "pino-pretty": "^10.3.1"
+    "@modelcontextprotocol/sdk": "^1.16.0",
+    "debug": "^4.4.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
     "tsx": "^4.0.0",
-    "vitest": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^1.0.0"
   },
   "keywords": [
     "mcp",
@@ -62,4 +62,4 @@
   "publishConfig": {
     "access": "public"
   }
-} 
+}
